syntax = "proto3";

package MessagesPack;

service ServerEvents	{
  rpc GetWorkerStatus (IntegerRequest) returns (StringResponse) {}
  rpc GetDepLeaders (IntegerRequest) returns (GetLeadersResponse) {}
  rpc GetLeaders (BlankMsg) returns (GetLeadersResponse) {}						//ok
  rpc Register (RegisterRequest) returns (WorkerEventResponse) {}				//ok
  rpc LogIn (LoginRequest) returns (LogInResponse) {}							//ok
  rpc LogOut (LogOutRequest) returns (WorkerEventResponse) {}					//ok
  rpc CallCoffeeBreak (CoffeBreakRequest) returns (WorkerEventResponse) {}			
  rpc GetTaskList (TaskListRequest) returns (TaskListResponse) {}				//ok
  rpc AddTeam (AddTeamRequest) returns (WorkerEventResponse) {}					//ok
  rpc RemoveTeam (TeamDescription) returns (WorkerEventResponse) {}				//ok
  rpc AddDepartment (AddDepRequest) returns (WorkerEventResponse) {}			//ok
  rpc RemoveDepartment (DepartmentDescription) returns (WorkerEventResponse) {}	//TODO
  rpc GetTeamID (NameRequest) returns  (IntegerResponse) {}						//ok
  rpc GetDepartments (BlankMsg) returns (DepartmentsListResp) {}				//OK
  rpc GetDepartmetTeams (NameRequest) returns (TeamListResp) {}					//ok
  rpc GetDepartmentWorkers (NameRequest) returns (TeamListResp) {}				//ok
  rpc GetWorkerName (IntegerRequest) returns (WorkerEventResponse) {}			//ok
  //send departments info and get back head Name and ID
  rpc GetDepHead (DepartmentDescription) returns (TeamDescription) {}			//ok
  rpc GetAllDepTasks (NameRequest) returns (TaskListResponse) {}				//ok
  rpc GetDepFromUser(IntegerRequest) returns (WorkerEventResponse) {}			//ok
  //Send status as string and workerID as int
  rpc GetTeamSpecificTasks (TeamDescription) returns (TaskListResponse) {}		//ok
  rpc AddTask (Task) returns (WorkerEventResponse) {}							//ok
  rpc CallEmergency (IntIntRequest) returns (WorkerEventResponse) {}			//ok
  rpc PullEmergency (IntIntRequest) returns (WorkerEventResponse) {}			//ok
  rpc PullCoffeeBrake (CoffeBreakRequest) returns (WorkerEventResponse) {}		//ok
  rpc RemoveTask (Task) returns (WorkerEventResponse) {}						//TODO
  rpc GetAllWorkers (BlankMsg) returns (TeamListResp) {}						//ok get list of WORKERS NAME AND ID
}

message IntIntRequest {
	int32 teamID = 1;
	int32 workerID = 2;
}
message IntegerRequest {
	int32 number = 1;
}
message StringResponse {
	string resp = 1;
}
message AddDepRequest {
	string depName = 1;
}

message AddTeamRequest {
	string departmentName = 1;
	string teamName = 2;
}

message TeamDescription {
	int32 index = 1;
	string name = 2;
}

message TeamListResp {
	repeated TeamDescription teamDesc = 1;
}

message BlankMsg {
}

message DepartmentDescription {
	int32 index = 1;
	string name = 2;
}

message DepartmentsListResp {
	repeated DepartmentDescription depsDesc = 1;
}

message IntegerResponse {
	int32 number = 1;
}

message TaskListRequest {
	string teamName = 1;
}

message NameRequest {
	string teamName = 1;
}

message Task {
	string team = 1;
	int32 teamID = 2;
	string status = 3;
	string text = 4;
}

message TaskListResponse {	
	repeated Task tasks = 1;
}

message CoffeBreakRequest {
	string name = 1;
}

message LogOutRequest {
	int32 id = 1;
}

message LoginRequest {
  int32 id = 1;
  string password = 2;
}

message WorkerEventResponse {
  string msg = 1;
  bool state = 2;
}

message LogInResponse {
	string msg = 1;
	bool state = 2;
	int32 level = 3;
	string name = 4;
	int32 teamId = 5;
	string team = 6;
}
message RegisterRequest {
	string name = 1;
	string password = 2;
	string teamName = 3;
	string DepName = 4;
	int32 level = 5;
}

message leaderItem {
	string leaderName = 1;
	string teamName = 2;
	int32 teamId = 3;
	int32 leaderId = 4;
}

message GetLeadersResponse {
	repeated leaderItem leaders = 1;
}